# nightglass

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.agents/: issue-implementer.md
.claude/: CLAUDE.md
.github/workflows/: assets.yml  ci.yml  release.yml
.scratch/party-idle-vertical-slice/: map.md
assets-raw/: audio-provenance.json
assets-raw/backdrops/: backdrop-1.source.json  backdrop-2.source.json  backdrop-3.source.json  carillon-hall.source.json  crooked-cornfield.source.json  harvest-yard.source.json  last-stop-diner.source.json  stopped-clock-court.source.json  the-mainspring.source.json  the-oculus.source.json
assets-raw/grid_raw/: boss-2.source.json  (+19 more)
docs/: acquisition-contract-large.md  acquisition-contract-small.md  acquisition-contract.md  animation-contract.md  backdrop-contract.md  body-sprite-contract.md  fowl-harvest-theme.md  fowl-harvest-ui-contract.md  icon-contract.md  sign-off-checklist.md  unwound-belfry-theme.md  vertical-slice-spec.md
e2e/: contrast.spec.ts  keyboard.spec.ts  reduced-motion.spec.ts  rendered-evidence.spec.ts  scenario-registry.spec.ts  stress.spec.ts  zz-scenario-registry.spec.ts
pipeline/: README.md  acquire.py  backdrops.py  test_contract.py
scripts/: set-version.mjs
src/: e2e-ci-artifacts.contract.test.ts  main.test.ts  main.ts  styles.css  vitest.setup.ts
src-tauri/: Cargo.toml  accounted-permissions.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+966 files in other folders)
