[package]
name = "nightglass"
version = "0.0.0"
description = "Nightglass Battle Tile"
authors = ["you"]
edition = "2021"

[lib]
name = "nightglass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
